# azure-foundry-guardrails-audit

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: run.defaults.yaml  target.example.yaml
packs/: core_pack.yaml  core_pack_v2.yaml  placeholders.example.yaml
src/llm_guardrails_audit/: azure_client.py  cli.py  models.py  pack_loader.py  parse_signals.py  placeholders.py  report.py  runner.py  scoring.py
tests/: test_scoring.py
